Fix members pagination